--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 resources/
 
 /target/
+target/m2e-wtp/web-resources/META-INF/maven/Financials/Capstone/pom.properties
+*.MF
+*.properties
+.classpath
+*.properties
