--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ target/
 .settings/
 .project
 *.properties
+target/m2e-wtp/web-resources/META-INF/maven/Financials/Capstone/pom.properties
+*.properties
