--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ target/
 target/m2e-wtp/web-resources/META-INF/maven/Financials/Capstone/pom.properties
 *.properties
 /target
+/.classpath
+/.project
+/.settings
