--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,25 @@
             <version>4.3.3.RELEASE</version>
         </dependency>
                 
+		<dependency>
+    <groupId>org.codehaus.jackson</groupId> 
+    <artifactId>jackson-mapper-asl</artifactId>
+    <version>1.9.7</version>
+</dependency>
 
+<dependency>
+    <groupId>org.codehaus.jackson</groupId> 
+    <artifactId>jackson-core-asl</artifactId>
+    <version>1.9.7</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180130</version>
+</dependency>
+		
                 
                 
 
